...
}

final class RasterDocument {
    static let referenceCanvasSize = CGSize(width: 1920, height: 1200)
    static nonisolated(unsafe) var persistenceRootOverride: URL?
    static let wackyBrushes: [WackyBrushDescriptor] = [
        .init(id: 0, name: "Leaky Pen", assetName: "tool-menu-wacky-brush-70"),
        .init(id: 1, name: "Zig Zag", assetName: "tool-menu-wacky-brush-71"),
        .init(id: 2, name: "Dots", assetName: "tool-menu-wacky-brush-72"),
        .init(id: 3, name: "Bubbly", assetName: "tool-menu-wacky-brush-73"),
        .init(id: 4, name: "Pies", assetName: "tool-menu-wacky-brush-74"),
        .init(id: 5, name: "Echoes", assetName: "tool-menu-wacky-brush-75"),
        .init(id: 6, name: "Northern Lights", assetName: "tool-menu-wacky-brush-76"),
        .init(id: 7, name: "Fuzzer", assetName: "tool-menu-wacky-brush-77"),
        .init(id: 8, name: "Magnifying Glass", assetName: "tool-menu-wacky-brush-78"),
        .init(id: 9, name: "Spray Paint", assetName: "tool-menu-wacky-brush-79"),
        .init(id: 10, name: "Pine Needles", assetName: "tool-menu-wacky-brush-80"),
        .init(id: 11, name: "3-D", assetName: "tool-menu-wacky-brush-81"),
        .init(id: 12, name: "Kaleidoscope", assetName: "tool-menu-wacky-brush-82"),
...
        .init(id: 21, name: "Starburst", assetName: "br-starburst"),
        .init(id: 22, name: "The Looper", assetName: "tool-menu-wacky-brush-92"),
        .init(id: 23, name: "A Galaxy of Stars", assetName: "tool-menu-wacky-brush-94"),
        .init(id: 24, name: "Lots of Hugs and Xs", assetName: "tool-menu-wacky-brush-95"),
        .init(id: 25, name: "A Full Deck of Cards", assetName: "tool-menu-wacky-brush-96"),
        .init(id: 26, name: "Shapes and More Shapes", assetName: "tool-menu-wacky-brush-97"),
        .init(id: 27, name: "Paw Prints", assetName: "system-pawprint")
    ]
    let size: CGSize
    private(set) var image: UIImage
    private var undoImages: [UIImage] = []
    private var redoImages: [UIImage] = []
    private var transactionImage: UIImage?
...
